--- a/AnalyzingHistoricalStockRevenueDataandBuildingDashboard.ipynb
+++ b/AnalyzingHistoricalStockRevenueDataandBuildingDashboard.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f5d8c0cc-00af-4d04-b2d1-ec37ec065e23",
    "metadata": {},
    "outputs": [
@@ -204,8 +204,7 @@
    ],
    "source": [
     "tesla = yf.Ticker(\"TSLA\")\n",
-    "\n",
-    "print(tesla)"
+    "\n"
    ]
   },
   {
@@ -570,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "638a6235-eb30-4c2f-a45d-bc9811f8f53a",
    "metadata": {},
    "outputs": [
@@ -3341,8 +3340,7 @@
    "source": [
     "url = 'https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0220EN-SkillsNetwork/labs/project/revenue.htm'\n",
     "\n",
-    "html_data  = requests.get(url).text\n",
-    "print(html_data)"
+    "html_data  = requests.get(url).text\n"
    ]
   },
   {
@@ -3355,7 +3353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "60ebd9df-ec15-406e-87b1-c090e4a482b4",
    "metadata": {},
    "outputs": [
@@ -6115,8 +6113,7 @@
    ],
    "source": [
     "soup = BeautifulSoup(html_data, 'html5lib')\n",
-    "\n",
-    "print(soup)"
+    "\n"
    ]
   },
   {
@@ -7449,7 +7446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "421ee034-7d55-449f-9e3e-98034aafd6cf",
    "metadata": {},
    "outputs": [
@@ -10231,8 +10228,7 @@
    "source": [
     "url2 = 'https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0220EN-SkillsNetwork/labs/project/stock.html'\n",
     "\n",
-    "html_data2 = requests.get(url2).text\n",
-    "print(html_data2)"
+    "html_data2 = requests.get(url2).text\n"
    ]
   },
   {
@@ -10245,7 +10241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "7309fd63-2222-4c43-876a-542c48364eb6",
    "metadata": {},
    "outputs": [
@@ -13025,8 +13021,7 @@
    ],
    "source": [
     "soup2 = BeautifulSoup(html_data2, 'html5lib')\n",
-    "\n",
-    "print(soup2)"
+    "\n"
    ]
   },
   {
